--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -1,25 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-.banner img {
+.banner { 
     height: 500px;
-}
+ } 
+.banner img { 
+    height: 500px;
+ } 
 
 .caption {
     color: #000000;
-    padding: 0px 450px 150px 0px;
+    margin: 200px 150px 150px 0px;
+    width: 400px;
 }
 
 .caption h3 {
     font-style: normal;
     font-weight: 500;
-    font-size: 32px;
-    line-height: 38px;
+    font-size: 28px;
+    line-height: 24px;
+    width: 500px;
 }
 
 .caption p {
     font-weight: 300;
     font-size: 16px;
-}
+    width: 550px;
+} 
 
 .coloredCaption {
     color: #7BBC3A;
@@ -27,4 +33,29 @@
 
 .secondSlider img{
     box-shadow: 120px -100px #3ABC7E;
+}
+
+/* Mobile device */
+@media only screen and (max-width: 768px) {
+    
+    .caption {
+        padding: 10px;
+        width: 400px;
+    }
+    
+    .caption h3 {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 18px;
+    }
+    
+    .caption p {
+        font-weight: 200;
+        font-size: 12px;
+        width: 400px;
+    } 
+    
+    
+    
+    
 }
